traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res  isFacingWall()
  ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  left()
  ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res = res && (getDirection() == NORTH && isFacingWall())
  ^Snake:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  left()
  ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return res
  ^